--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ output-dir = abilian/translations
 #
 [pytest]
 python_files = test*.py
-addopts = --tb=short
+#addopts = --tb=short
 norecursedirs = .tox *.egg
 pep8ignore = E121 E111 E201 E202 E231 E261
 pep8maxlinelength = 99
