--- a/setup.cfg
+++ b/setup.cfg
@@ -52,13 +52,12 @@ output-dir = abilian/translations
 #
 [pytest]
 python_files = test*.py
-#addopts = --tb=short
 norecursedirs = .tox *.egg
 pep8ignore = E121 E111 E201 E202 E231 E261
 pep8maxlinelength = 99
 
 [flake8]
-ignore = E111,E114,E121,E201,E202,E225,E501
+ignore = E111,E114,E121,E129,E201,E202,E225,E501
 
 [pep8]
 ignore = E111,E114,E121,E201,E202,E225,E501
