--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 env:
   - SQLALCHEMY_DATABASE_URI="sqlite://"
-  - SQLALCHEMY_DATABASE_URI="postgres://abilian_core_test:test_pw@localhost:5432/abilian_core_test_db"
+  - SQLALCHEMY_DATABASE_URI="postgres://postgres@localhost:5432/abilian_core"
 
 services:
   - redis-server
@@ -12,7 +12,7 @@ services:
 addons:
   postgresql: "9.3"
 
-# Install OS dependencies
+# Install OS-level dependencies
 before_install:
  - sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm
  - sudo apt-add-repository -y ppa:chris-lea/node.js
@@ -26,15 +26,13 @@ install:
 
 # Create DB
 before_script:
-  - createuser -w -U postgres -DRS abilian_core_test
-  - psql -w -U postgres -c "ALTER USER abilian_core_test WITH ENCRYPTED PASSWORD 'test_pw';"
-  - createdb -w -U postgres -E utf-8 -O abilian_core_test abilian_core_test_db
+  - psql -c 'create database abilian_core;' -U postgres
 
 # Run tests
 script:
-  - py.test --tb=short -q --cov abilian --cov-config etc/coverage.rc abilian tests
+  - py.test --tb=short -q --cov abilian abilian tests
   - sphinx-build -W -b html docs/ docs/_build/
 
 # Report coverage
 after_success:
-  - coveralls --rcfile=etc/coverage.rc
+  - coveralls
